revised bisse intro
Adjusted sectioning so the different pieces of the algorithm can have
their own subsubsections.

Moved some content into what seemed like more logical places.
e.g., incomplete sampling not buried with musse
      some math out of General and into Derivation

Added figures from BiSSE paper.  Perhaps not essential, but the
derivation aims to be comprehensive so this might help.

Adjusted the figure showing the six rates so that the transition rates
are clearly distinct.

Added more discussion of what to do at the root.  A real Bayesian might
edit the phrasing.

--- a/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial.tex
+++ b/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial.tex
@@ -24,6 +24,7 @@
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
 \input{../RB_DiversificationRateIntro_Tutorial/RB_DiversificationRateIntro_Tutorial_content_no_bib}
+% Maybe the "Models" section isn't necessary?
 \input{RB_DiversificationRate_CharacterDependent_Tutorial_content}
 
 Version dated: \today
