--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -3121,6 +3121,15 @@ Uses also the diagnosis of the golden runs.},
   Timestamp                = {2009.01.20}
 }
 
+@Article(Goldberg2008,
+  Title   = {On Phylogenetic Tests of Irreversible Evolution},
+  Author  = {Goldberg, Emma E. and Igi{\'c}, Boris},
+  Journal = EVOLUTION,
+  Year    = {2008},
+  Volume  = {62},
+  Pages   = {2727--2741},
+}
+
 @Article{Goldberg2010,
   Title                    = {Species selection maintains self-incompatibility},
   Author                   = {Goldberg, Emma E and Kohn, Joshua R and Lande, Russell and Robertson, Kelly A and Smith, Stephen A and Igi{\'c}, Boris},
