tiny polishing on the tutorials

--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/bayes.bib
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/bayes.bib
@@ -1,24 +1,25 @@
+% Encoding: UTF-8
 @string{AHG         = "Annals of Human Genetics"}
 @string{AJHG        = "American Journal of Human Genetics"}
 @string{ARB         = "Annual Review of Biochemistry"}
 @string{ARCB        = "Annual Review of Cell Biology"}
-@string{BMCBI       = "BMC Bioinformatics"}
 @string{BI          = "Bioinformatics"}
 @string{BIOGEN      = "Biochemical Genetics"}
 @string{BJLS        = "Biological Journal of the Linnean Society"}
 @string{BMB         = "Bulletin of Mathematical Biology"}
+@string{BMCBI       = "BMC Bioinformatics"}
 @string{CABIOS      = "Computer Applications in the Biosciences"}
-@string{CELL        = "Cell"}
 @string{CACM        = "Communications of the ACM"}
+@string{CELL        = "Cell"}
 @string{COCB        = "Current Opinion in Cell Biology"}
 @string{COGD        = "Current Opinion in Genetics and Development"}
+@string{ComputChem  = "Computers and Chemistry"}
 @string{COSB        = "Current Opinion in Structural Biology"}
 @string{CSHSQB      = "Cold Spring Harbor Symposia Quantitative Biology"}
-@string{ComputChem  = "Computers and Chemistry"}
 @string{EMBO        = "EMBO Journal"}
 @string{EVO         = "Evolution"}
-@string{GEN         = "Genetics"}
 @string{GB          = "Genome Biology"}
+@string{GEN         = "Genetics"}
 @string{GR          = "Genome Research"}
 @string{JBSD        = "Journal of Biomolecular Structure and Dynamics"}
 @string{JComputBiol = "Journal of Computational Biology"}
@@ -33,21 +34,21 @@
 @string{ME          = "Methods in Enzymology"}
 @string{MPE         = "Molecular Phylogenetics and Evolution"}
 @string{NAR         = "Nucleic Acids Research"}
-@string{NC          = "Neural Computation"}
-@string{NNB         = "Nature New Biology"}
-@string{NG          = "Nature Genetics"}
-@string{NB          = "Nature Biotechnology"}
 @string{Nature      = "Nature"}
+@string{NB          = "Nature Biotechnology"}
+@string{NC          = "Neural Computation"}
+@string{NG          = "Nature Genetics"}
+@string{NNB         = "Nature New Biology"}
 @string{PE          = "Protein Engineering"}
 @string{PLOSCOMPBIO = "PLoS Computational Biology"}
 @string{PNAS        = "Proceedings of the National Academy of Sciences of the USA"}
 @string{PROT        = "Proteins"}
 @string{PROTSCI     = "Protein Science"}
+@string{Science     = "Science"}
+@string{S           = Science}
 @string{SIAM        = "SIAM Journal of Applied Mathematics"}
 @string{SYSB        = "Systematic Biology"}
 @string{SZ          = "Systematic Zoology"}
-@string{Science     = "Science"}
-@string{S           = Science}
 @string{TIBTECH     = "Trends in Biotechnology"}
 @string{TIGS        = "Trends in Genetics"}
 @string{UKSB        = "University of Kansas Scientific Bulletin"}
@@ -3246,15 +3247,6 @@ url          = {http://www.R-project.org}
   address   = {New York}
 }
 
-@Article{li00,
-  author    = {S. Li and H. Doss and D. Pearl},
-  title     = {Phylogenetic tree reconstruction using {M}arkov chain {M}onte {C}arlo},
-  journal   = {Journal of the American Statistical Society},
-  year      = 2000,
-  volume    = 95,
-  pages     = {493--508}
-}
-
 @Article{lakner08,
   author    = {C. Lakner and P. van der Mark and J. P. Huelsenbeck and B. Larget and F. Ronquist},
   title     = {Efficiency of {MCMC} proposals in {B}ayesian phylogenetics},
@@ -3527,8 +3519,7 @@ url          = {http://www.R-project.org}
   volume    = 6,
   pages     = {1}
 }
-
-@Article{luo08,
+{luo08,
   author    = {R. Luo and B. Larget},
   title     = {Modeling substitution and indel processes for {AFLP} marker evolution and phylogenetic inference},
   journal   = {The Annals of Applied Statistics},
@@ -6258,3 +6249,5 @@ doi 		= {10.1093/sysbio/sys029}
 
   Publisher                = {Oxford University Press}
 }
+
+@Comment{jabref-meta: databaseType:bibtex;}
