reorganized structure of SSE tutorial, added intro stuff

--- a/tutorial_TeX/RB_DiversificationRateIntro_Tutorial/RB_DiversificationRateIntro_Tutorial_content_no_bib.tex
+++ b/tutorial_TeX/RB_DiversificationRateIntro_Tutorial/RB_DiversificationRateIntro_Tutorial_content_no_bib.tex
@@ -1,4 +1,4 @@
-\section{Overview: Diversification Rate Estimation}
+\section{Overview: Diversification Rate Estimation} \label{sec:diversification_rate_overview}
 
 Models of speciation and extinction are fundamental to any phylogenetic analysis of macroevolutionary processes (\EG divergence time estimation, diversification rate estimation, continuous and discrete trait evolution, and historical biogeography).
 First, a prior model describing the distribution of speciation events over time is critical to estimating phylogenies with branch lengths proportional to time.
@@ -47,7 +47,7 @@ For example, one can hypothesize that a binary character, say if an organism is 
 Then, if the organism is in state 0 (\EG is herbivorous) it has a lower (or higher) diversification rate than if the organism is in state 1 (\EG carnivorous) \citep{Maddison2007}.
 
 
-\section{Models}\label{sec:Models}
+\section{Diversification Rate Models} \label{sec:models}
 
 We begin this section with a general introduction to the stochastic birth-death branching process that underlies inference of diversification rates in \RevBayes.
 This primer will provide some details on the relevant theory of stochastic-branching process models.
