--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -2651,6 +2651,14 @@ Coalescence Theory, Population Size, Divergence Times},
   Timestamp                = {2015.07.30}
 }
 
+@article{Freyman2017,
+  title={{Cladogenetic and anagenetic models of chromosome number evolution: a Bayesian model averaging approach}},
+  author={Freyman, William A and H{\"o}hna, Sebastian},
+  journal={{Systematic Biology}},
+  year={2017},
+  volume={syx065}
+}
+
 @Article{Friedman2004,
   Title                    = {Inferring cellular networks using probabilistic graphical models},
   Author                   = {Friedman, Nir},
