--- a/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial.tex
+++ b/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial.tex
@@ -17,15 +17,17 @@
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
 \textbf{\it{\Large State-Dependent Diversification Rate Estimation}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Sebastian H{\"o}hna and Will Freyman}
+{\Large Sebastian H{\"o}hna, Will Freyman, and Emma Goldberg}
 \vspace{1cm}
 \end{center}
 
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
+
+\input{RB_DiversificationRate_CharacterDependent_Tutorial_content_intro}
 \input{../RB_DiversificationRateIntro_Tutorial/RB_DiversificationRateIntro_Tutorial_content_no_bib}
 % Maybe the "Models" section isn't necessary?
-\input{RB_DiversificationRate_CharacterDependent_Tutorial_content}
+\input{RB_DiversificationRate_CharacterDependent_Tutorial_content_main}
 
 Version dated: \today
 
