--- a/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial_content_main.tex
+++ b/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial_content_main.tex
@@ -1,57 +1,3 @@
-\section{Estimating Character State-Dependent Speciation \& Extinction Rates}
-
-\subsection{Outline}
-
-This tutorial describes how to specify a character state-dependent branching process models in \RevBayes.
-This model is a birth-death process where diversification rates are dependent on the state of an evolving character.
-The original model of this type considered a binary character (a trait with two discrete state values; called BiSSE, \citealt{Maddison2007}).
-Several variants have also been developed for other types of traits \citep{FitzJohn2010, Goldberg2011, Goldberg2012, MagnusonFord2012, FitzJohn2012, Beaulieu2016}.
-
-We will outline the theory behind this method, and then you will fit it to data using Markov chain Monte Carlo (MCMC).
-
-% The probabilistic graphical model is given for this tutorial.
-
-\subsection{Requirements}
-
-We assume that you have read and hopefully completed the following tutorials:
-\begin{itemize}
-\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Getting_Started/RB_Getting_Started.pdf}{Getting started}
-\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics}
-\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_DiversificationRate_Tutorial/RB_DiversificationRate_Tutorial.pdf}{Basic Diversification Rate Estimation}
-\end{itemize}
-Note that the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics tutorial} introduces the basic syntax of \Rev but does not cover any phylogenetic models.
-You may skip the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics tutorial} if you have some familiarity with \R.
-We tried to keep this tutorial very basic and introduce all the language concepts and theory on the way.
-You may only need the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics tutorial} for a more in-depth discussion of concepts in \Rev.
-
-%%%%%%%%%%%%%%
-%%   DATA   %%
-%%%%%%%%%%%%%%
-\section{Data and files}
-
-We provide the data files which we will use in this tutorial.
-You may want to use your own data instead.
-In the \cl{data} folder, you will find the following files:
-\begin{itemize}
-
-    \item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/RB_DiversificationRate_CharacterDependent_Tutorial/data/primates_tree.nex}{primates\_tree.nex}:
-        Dated primate phylogeny including 233 out of 367 species.
-        (This tree is from \citealt{MagnusonFord2012}, who took it from \citealt{Vos2006} and then randomly resolved the polytomies using the method of \citealt{Kuhn2011}.)
-
-    % Not actually used in this tutorial.
-    % \item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/RB_DiversificationRate_CharacterDependent_Tutorial/data/primates_habitat.nex}{primates\_habitat.nex}:
-    %     Habitat data (also from \citealt{MagnusonFord2012}).
-
-    \item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/RB_DiversificationRate_CharacterDependent_Tutorial/data/primates_morph.nex}{primates\_morph.nex}:
-        A set of several discrete-valued characters. % from where?
-        The characters are described in the file \href{https://github.com/revbayes/revbayes_tutorial/raw/master/RB_DiversificationRate_CharacterDependent_Tutorial/data/primates_morph_description.txt}{primates\_morph\_description.txt}.
-
-\end{itemize}
-
-\impmark{Open the tree \cl{data/primates\_tree.nex} in FigTree.}
-
-\impmark{Open the character data file \cl{data/primates\_morph.nex} in a text editor.}
-
 %%%%%%%%%%%%%%%%%%%%
 %%%    THEORY    %%%
 %%%%%%%%%%%%%%%%%%%%
@@ -290,7 +236,7 @@ The resulting differential equations within the branches are:
 %%%%%%%%%%%%%%%%%%%%%%
 %%  Using RevBayes  %%
 %%%%%%%%%%%%%%%%%%%%%%
-\section{Using state-dependent diversification models with \RevBayes} \label{sec:CDBDP}
+\section{Using state-dependent diversification models with \RevBayes: the BiSSE model} \label{sec:CDBDP}
 
 Now let's start to analyze an example in \RevBayes using the BiSSE model.
 In \RevBayes, it's called ``CDBDP,'' meaning Character Dependent Birth Death Process.
@@ -329,7 +275,8 @@ Finally, we create a helper variable that specifies the number of states that th
 NUM_STATES = 2
 \end{lstlisting}
 \end{snugshade*}}
-Using this variable we can easily change our script to use a different character with a different number of states.
+Using this variable we can easily change our script to use a different character with a different number of states,
+essentially changing out model from BiSSE to MuSSE.
 (This will also be handy in our later example with the hidden-state speciation and extinction model.)
 
 \subsection{Specify the model}
@@ -625,7 +572,7 @@ dev.off()
 
 
 \bigskip
-\section{Accommodating uncorrelated diversification rate changes}\label{sec:HiSSE_Theory}
+\section{Accommodating uncorrelated diversification rate changes: the HiSSE model}\label{sec:HiSSE_Theory}
 
 \RevBayes implements the multi-state extension of \BiSSE, just as implemented in \diversitree. 
 The main differences are just which priors you use on the parameters and the inference procedure, \IE the specifics of the MCMC algorithm.
@@ -986,6 +933,11 @@ dev.off()
 \item Do you see differences to the previous \BiSSE estimates?
 \item Repeat this analysis for a different binary morphological character.
 \end{enumerate}
+
+
+
+\bigskip
+\section{Accommodating both cladogenetic and anagenetic changes: the ClaSSE model}\label{sec:ClaSSE}
 
 
 \bigskip
